erDiagram
    DEPOT ||--o{ PARCEL : origin_for
    DEPOT ||--o{ PARCEL : destination_for
    CUSTOMER ||--o{ PARCEL : sends
    PARCEL ||--o{ STATUS_EVENT : records
    DEPOT o|--o{ STATUS_EVENT : scanned_at
    PARCEL ||--o{ DELIVERY_ATTEMPT : receives

    DEPOT {
        integer id PK
        string code UK
        string city
    }
    CUSTOMER {
        integer id PK
        string email UK
        string name
    }
    PARCEL {
        integer id PK
        string tracking_code UK
        string recipient
        decimal weight
        integer origin_depot_id FK
        integer destination_depot_id FK
        integer sender_id FK
    }
    STATUS_EVENT {
        integer parcel_id PK, FK
        integer event_number PK
        string status
        datetime recorded_at
        integer depot_id FK
    }
    DELIVERY_ATTEMPT {
        integer id PK
        integer parcel_id FK
        datetime attempted_at
        string outcome
    }
